# aoc

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  justfile  snippets.rs  template.rs
.cargo/: config.toml
.circleci/: config.yml
.github/: clean_code_ref.md  pull_request_template.md
.github/workflows/: fast-forward-merge.yaml  ff-merge.yaml  rust.yaml  rustfmt.yaml  test.yaml
15/01/: Cargo.toml
15/02/: Cargo.toml
15/03/: Cargo.toml
15/04/: Cargo.toml
15/05/: Cargo.toml
15/06/: Cargo.toml
15/07/: Cargo.toml
15/08/: Cargo.toml
15/09/: Cargo.toml
15/10/: Cargo.toml
15/11/: Cargo.toml
15/11/src/: lib.rs  main.rs
15/11/tests/: integration.rs
15/12/: Cargo.toml
15/13/: Cargo.toml
15/14/: Cargo.toml
15/15/: Cargo.toml
15/16/: Cargo.toml
15/17/: Cargo.toml
15/18/: Cargo.toml
15/23/: Cargo.toml
15/23/src/: lib.rs  main.rs
15/23/tests/: integration.rs
15/day02/: Cargo.toml
15/day06/: Cargo.toml
15/day07/: Cargo.toml
15/day08/: Cargo.toml
15/day09/: Cargo.toml
15/day10/: Cargo.toml
15/day11/: Cargo.toml
15/day12/: Cargo.toml
15/day15/: Cargo.toml
15/day18/: Cargo.toml
15/day23/: Cargo.toml
15/day23/src/: lib.rs  main.rs
15/day23/tests/: integration.rs
16/01/: Cargo.toml
16/02/: Cargo.toml
16/03/: Cargo.toml
16/04/: Cargo.toml
16/05/: Cargo.toml
16/06/: Cargo.toml
16/07/: Cargo.toml
17/: Cargo.toml
22/12/: Cargo.toml
22/12/src/: lib.rs  main.rs
22/12/tests/: integration.rs
dev/: check_difficulty.nu  difficulty.toml  nextest.toml
devel/: difficulty.toml
utils/: Cargo.toml
(+731 files in other folders)
