[package]
name = "aoc_15_11"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
derive_more.workspace = true
utils.workspace = true
regex = "1.5.4"
lazy_static = "1.4.0"
