[package]
name = "aoc_15_23"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
derive_more.workspace = true
utils.workspace = true
strum = { version = "0.24.1", features = ["derive"] }
