[package]
name = "day23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
itertools = "*"
strum = { version = "0.24.1", features = ["derive"] }
utils = { path = "../../utils" }
