[package]
name = "aoc_22_12"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
derive_more.workspace = true
utils.workspace = true
graph = "0.3.0"
pathfinding = "4.2.1"
